lesson: 01/lesson-01 - How Java actually runs: bytecode, the class file, and the JIT